ini adalah tambahan paragraf

--- a/latihan_git.html
+++ b/latihan_git.html
@@ -6,6 +6,11 @@
     <title>Latihan Upload Git</title>
 </head>
 <body>
-    
+    <!-- cara upload dari local ke git, sebagai berikut:
+    1. buat file
+    2. ketikkan git add nama_file atau git add .
+    3. ketikkan git commit -m "komentar"
+    4.  ketikkan git - u push origin nama_branch -->
+        <p> testing edit</p>
 </body>
 </html>
