--- a/latihan_git2.html
+++ b/latihan_git2.html
@@ -9,5 +9,8 @@
     <p>testing ketika sudah di merge</p>
     <p>apakah masuk langsung ke master atau tidak</p>
 
+    <p>testing gin confilct</p>
+    <p>testing mengatasi git confilct</p>
+
 </body>
 </html>
